# compute-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: bl.txt  bp.txt  bschur.txt  hll.txt  hpl.txt  hpp.txt  hschur.txt  small.txt  xl.txt  xp.txt
data-pgo/: bschur.txt  hpp.txt  xp.txt
shaders/: add_vec.comp  add_vec_const_vec.comp  copy_blocks.comp  copy_vec.comp  div_vec.comp  fill_vec.comp  multiply_vec.comp  reduction.comp  sbm_bdi.comp  sbm_left_multiply_block_diagonal.comp  sbm_multiply_abat.comp  sbm_multiply_block_diagonal.comp  sbm_multiply_build_list.comp  sbm_multiply_dist.comp  sbm_multiply_dynamic.comp  sbm_multiply_estimate_list.comp  sbm_multiply_lite.comp  sbm_multiply_lite_dynamic.comp  sbm_multiply_packed.comp  set_diagonal.comp  square_array.comp
src/: CustomOp.cpp  sbm_bench.cpp  tests.cpp
src/backend/sycl/: compute_engine.cpp
src/backend/vulkan/: compute_engine.cpp
src/include/solver/: backend.hpp  gpu_buffer.hpp  interfaces.h  linear_solver.hpp  linear_solver_cuda.hpp  matrix_types.hpp  pcg.hpp  sparse_block_matrix.hpp  utility.hpp
src/include/solver/backend/sycl/: backend.hpp  compute_buffer.hpp  compute_engine.hpp  solver.hpp
src/include/solver/backend/vulkan/: backend.hpp  compute_buffer.hpp  compute_engine.hpp  solver.hpp
src/include/solver/kp/: CustomOp.hpp
